# ringtest

./: .gitignore  CMakeLists.txt  ProjectOptions.cmake  flake.nix
cmake/: CompilerWarnings.cmake  Hardening.cmake  PreventInSourceBuild.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  Tests.cmake
include/: ring_buffer.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
